--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.7.0",
     "angular-validation-match": "~1.5.2",
-    "angular-google-chart": "^0.1.0"
+    "angular-google-chart": "^0.1.0",
+    "angular-google-maps": "^2.3.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
