--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular-socket-io": "~0.7.0",
     "angular-validation-match": "~1.5.2",
     "angular-google-chart": "^0.1.0",
-    "angular-google-maps": "^2.3.2"
+    "angular-google-maps": "^2.3.2",
+    "firebase": "^2.4.1",
+    "angularfire": "^1.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0"
